kube-system/plex.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  annotations:
    tailscale.com/tailnet-fqdn: "plex.tahr-toad.ts.net"
  name: ts-egress-plex
spec:
  externalName: unused
  type: ExternalName
