kube-system/proxmox.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  annotations:
    tailscale.com/tailnet-fqdn: "pve.tahr-toad.ts.net"
  name: ts-proxmox-egress
spec:
  externalName: unused
  type: ExternalName
