kube-system/reboot.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tailnet-fqdn: "reboot.tahr-toad.ts.net"
  name: ts-egress-reboot
spec:
  externalName: unused
  type: ExternalName
