kube-system/wazuh-manager.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  annotations:
    tailscale.com/tailnet-fqdn: "wazuh-manager.tahr-toad.ts.net"
  name: ts-egress-wazuh-manager
spec:
  externalName: unused
  type: ExternalName
