kube-system/wazuh-registration.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  annotations:
    tailscale.com/tailnet-fqdn: "wazuh-registration.tahr-toad.ts.net"
  name: ts-egress-wazuh-registration
spec:
  externalName: unused
  type: ExternalName
