kube-system/wazuh.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  annotations:
    tailscale.com/tailnet-fqdn: "wazuh.tahr-toad.ts.net"
  name: ts-egress-wazuh
spec:
  externalName: unused
  type: ExternalName
