kube-system/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hubble
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`hubble.mizar.scalar.cloud`)
      middlewares:
        - name: authentik-auth-proxy
          namespace: default
      priority: 10
      services:
        - name: hubble-ui
          kind: Service
          namespace: kube-system
          port: http
  tls:
    secretName: hubble-ui-tls
